added admin panel, ui changes, hot reloading for core go server
